# gr-krakensdr

./: CMakeLists.txt  MANIFEST.md  README.md  heimdall_only_start.sh  heimdall_only_stop.sh
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-krakensdrConfig.cmake
docs/: CMakeLists.txt  README.krakensdr
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: kraken_corr_test.py  kraken_correlator_test.grc  kraken_fft_display.grc  kraken_fft_display.py  kraken_music_doa.grc  kraken_music_doa.py
grc/: .krakensdr_krakensdr_correlator.block.yml.swp  .krakensdr_krakensdr_source.block.yml.swp  CMakeLists.txt  krakensdr_doa_music.block.yml  krakensdr_krakensdr_correlator.block.yml  krakensdr_krakensdr_source.block.yml
include/gnuradio/krakensdr/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/krakensdr/: CMakeLists.txt  __init__.py  doa_music.py  krakensdr_correlator.py  krakensdr_source.py
python/krakensdr/bindings/: CMakeLists.txt  python_bindings.cc
